--- a/dcm4che-dict-arc/pom.xml
+++ b/dcm4che-dict-arc/pom.xml
@@ -82,6 +82,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>xml-maven-plugin</artifactId>
+        <version>1.0.1</version>
         <executions>
           <execution>
             <goals>
@@ -136,6 +137,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
+        <version>3.0.0</version>
         <executions>
           <execution>
             <goals>
