--- a/dcm4che-imageio/pom.xml
+++ b/dcm4che-imageio/pom.xml
@@ -46,6 +46,7 @@
      <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-surefire-plugin</artifactId>
+       <version>2.20.1</version>
       <configuration>
         <argLine>-Djava.library.path=/home/gunter/dcm4che/lib/linux-x86_64</argLine>
       </configuration>
